# iamjameswalters.github.io

./: .gitignore  404.html  a-little-ai-experiment-reading-handwriting-and-counting-numbers.html  archives.html  authors.html  categories.html  checking-in-is-fine.html  confessions-of-a-linux-grandpa-an-oral-history-1.html  confessions-of-a-linux-grandpa-an-oral-history-2.html  djangocon-2023-slides-resources.html  do-you-like-your-software.html  index.html  index2.html  index3.html  insecurely-copying-text-in-javascript.html  oh-no-not-another-dev-blog.html  pelicanconf.py  publishconf.py  pyohio-2023-slides-resources.html  pyohio-2024-slides-resources.html  pyproject.toml  robots-arent-responsible.html  robots.txt  software-development-for-the-masses.html  solving-verticals.html  tags.html  the-road-less-traveled-understanding-xpaths.html  weeknotes-831-the-inaugural-one.html  weeknotes-913-the-unlucky-one.html  weeknotes-920-the-one-with-the-new-laptop.html  weeknotes-927-the-one-with-mario-and-zelda.html  what-django-deployment-is-really-about.html
author/: james-walters.html  james-walters2.html  james-walters3.html
category/: ai.html  linux.html  meta.html  python.html  web.html  weeknotes.html
content/: any-updates-response.md  django-deployment.md  django-talk.md  djangocon-2023-retrospect.md  do-you-like-your-software.md  first-post.md  for-the-masses.md  js-clipboard.md  linux-grandpa-1.md  linux-grandpa-2.md  piccolo.md  problem-web-scripting-1.md  problem-web-scripting-2.md  problem-web-scripting-3.md  problem-web-scripting-4.md  problem-web-scripting-5.md  (+12 more)
(+63 files in other folders)
